--- a/assets/style.css
+++ b/assets/style.css
@@ -61,7 +61,7 @@ body {
 
 .hero-heading {
   color: #fff;
-  font-size: 100px;
+  font-size: 90px;
   font-weight: 300;
 }
 
@@ -74,10 +74,7 @@ body {
   object-fit: cover;
   opacity: 0.2;
 }
-.home-section {
-  /* previous styles */
-  position: fixed;
-}
+
 .home-section.active,
 .project-section.active,
 .about-section.active,
@@ -87,56 +84,19 @@ body {
   z-index: 8;
 }
 
-.about-section {
-  width: 100%;
-  min-height: 100vh;
-  padding: 150px 100px 0;
-  position: fixed;
-  top: 0;
-  opacity: 0;
-  transition: 1s;
-}
-
 .about {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 30% 65%;
-  grid-gap: 40px;
+  display: flex;
+  align-items: center;
+  color: white;
+  width: 38rem;
 }
-
-.about-img-container {
-  position: relative;
+.text-center {
+  color: white;
 }
-
 .about-info {
+  display: flex;
   color: #fff;
   opacity: 0.6;
   font-size: 20px;
-  line-height: 40px;
-}
-
-.about-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 20px;
-}
-
-.download-cv-btn {
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 10px 20px;
-  color: #fff;
-  border: none;
-  font-size: 16px;
-  text-transform: capitalize;
-  cursor: pointer;
-  transition: 0.5s;
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.download-cv-btn:hover {
-  background: #000;
+  line-height: var(--line-height);
 }
