--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
   width: 100%;
   max-width: 1400px;
@@ -16,87 +15,48 @@ body {
 
 .navbar {
   width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   background: #1a1a1a;
+  color: white;
 }
-
-.link-group {
-  list-style: none;
-  display: flex;
-}
-
-.link a {
-  color: #fff;
-  opacity: 0.5;
-  text-decoration: none;
-  text-transform: capitalize;
-  padding: 10px 30px;
-  margin: 0 20px;
-  line-height: 80px;
-  transition: 0.5s;
-  font-size: 20px;
-}
-
-.link a:hover,
-.link.active a {
-  opacity: 1;
-}
-
 .home-section {
   width: 100%;
   height: 100vh;
-  padding: 0 150px;
   display: flex;
-  align-items: center;
-  position: relative;
-  top: 0;
-  opacity: 0;
-  transition: 1s;
 }
-
-.hero-heading {
-  color: #fff;
-  font-size: 90px;
-  font-weight: 300;
-}
-
 .home-img {
   position: absolute;
   top: 0;
   right: 0;
   height: 100vh;
-  width: 50%;
+  width: 100%;
   object-fit: cover;
   opacity: 0.2;
 }
-
-.home-section.active,
-.project-section.active,
-.about-section.active,
-.contact-section.active {
-  position: relative;
-  opacity: 1;
-  z-index: 8;
+/* text css above hero image*/
+.hero_title {
+  font-size: 4.5rem;
 }
-
+.hero_desc {
+  font-size: 2rem;
+}
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
 .about {
-  display: flex;
   align-items: center;
   color: white;
-  width: 38rem;
+  width: 50rem;
 }
-.text-center {
+
+.header-about {
   color: white;
-}
-.about-info {
-  display: flex;
-  color: #fff;
-  opacity: 0.6;
-  font-size: 20px;
-  line-height: var(--line-height);
+  align-items: center;
 }
