--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,17 @@ body {
   background: #1a1a1a;
   color: white;
 }
+.link a {
+  color: #fff;
+  opacity: 0.5;
+  text-decoration: none;
+  text-transform: capitalize;
+  padding: 10px 30px;
+  margin: 0 20px;
+  line-height: 80px;
+  transition: 0.5s;
+  font-size: 20px;
+}
 .home-section {
   width: 100%;
   height: 100vh;
@@ -51,12 +62,29 @@ body {
   color: white;
 }
 .about {
+  display: flex;
   align-items: center;
+  justify-content: center;
+  gap: 2.5rem;
+  max-width: 68.75rem;
+  margin: auto;
   color: white;
-  width: 50rem;
 }
-
 .header-about {
-  color: white;
+  display: flex;
+  margin: auto;
+}
+.projects {
+  display: flex;
   align-items: center;
+  justify-content: center;
+  gap: 2.5rem;
+  max-width: 68.75rem;
+  margin: auto;
+  color: white;
+}
+.project-info a {
+  color: #fff;
+  opacity: 0.5;
+  font-size: 20px;
 }
